# StaticScript

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README-zh_CN.md  README.md  ROADMAP-zh_CN.md  install-macos.sh  install-ubuntu.sh
.github/workflows/: build.yml  ci.yml  release.yml
builtin/: CMakeLists.txt  ss_array.c  ss_base.h  ss_error.c  ss_error.h  ss_io.c  ss_io.h  ss_string.c  ss_string.h
cmake/: AddANTLR.cmake  AddDoxygen.cmake  AddLLVM.cmake
examples/: all.ss  array.ss  function.ss  iteration.ss  operators.ss  selection.ss  variable.ss
grammar/: StaticScriptLexer.g4  StaticScriptParser.g4
include/: AnnotatedTree.h  BlockScope.h  Function.h  FunctionType.h  PrimitiveType.h  Scope.h  StackFrame.h  StaticScriptHeaders.h  Symbol.h  Type.h  Variable.h  Visitor.h  config.h.in
include/AST/: AST.h  ASTBuilder.h  ASTVisitor.h  Base.h  Decl.h  DeclNode.h  Expr.h  ExprNode.h  Module.h  ModuleNode.h  Node.h  Stmt.h  StmtNode.h  Type.h  TypeNode.h
include/CodeGen/: Builtin.h  IRGenerator.h  Pass.h
include/Config/: Config.h.in
include/Driver/: Visitor.h
include/Entity/: Scope.h  Type.h
include/Exception/: CodeGenException.h  CompilerException.h  DriverException.h  SemanticException.h
include/Optimization/: Optimizer.h
include/Sema/: ASTVisitor.h  ReferenceResolver.h  ScopeScanner.h  SemanticValidator.h  TypeChecker.h  VariableResolver.h
include/Support/: Alias.h  Error.h  Exception.h  Find.h  LLVM.h  Output.h
include/Util/: Alias.h  Find.h  Output.h
lib/: .gitattributes  CMakeLists.txt  ss_array.c  ss_array.h  ss_error.c  ss_error.h  ss_io.c  ss_io.h  ss_string.c
lib/AST/: ASTBuilder.cpp  ASTVisitor.cpp  Base.cpp  CMakeLists.txt  Decl.cpp  DeclNode.cpp  Expr.cpp  ExprNode.cpp  Module.cpp  ModuleNode.cpp  Stmt.cpp  StmtNode.cpp  Type.cpp  TypeNode.cpp
lib/CodeGen/: Builtin.cpp  CMakeLists.txt  DeclCodeGen.cpp  ExprCodeGen.cpp  IRGenerator.cpp
lib/Driver/: CMakeLists.txt  Driver.cpp  Visitor.cpp
lib/Entity/: CMakeLists.txt  Scope.cpp  Type.cpp
lib/Optimization/: CMakeLists.txt
lib/Sema/: ASTVisitor.cpp  CMakeLists.txt  ReferenceResolver.cpp  ScopeScanner.cpp  SemanticValidator.cpp  TypeChecker.cpp  VariableResolver.cpp
src/: AnnotatedTree.cpp  AnnotatedTree.h  BlockScope.cpp  CMakeLists.txt  Function.cpp  Function.h  FunctionType.cpp  FunctionType.h  PrimitiveType.cpp  PrimitiveType.h  Scope.cpp  Scope.h  StackFrame.cpp  StaticScriptHeaders.h  Symbol.cpp  Type.cpp  Type.h  Variable.cpp  Visitor.cpp  main.cpp
src/AST/: ASTBuilder.cpp  CMakeLists.txt  DeclNode.cpp  ExprNode.cpp  ModuleNode.cpp
tests/: .gitattributes  CMakeLists.txt  array.ss  fib.ss  float.ss  function.ss  iteration.ss  operators.ss  selection.ss  variable.ss
(+17 files in other folders)
